# infra-monitor

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: alerts.py
src/: main.py
src/alerts/: channels.py  engine.py
src/collectors/: base.py  cpu.py  disk.py  memory.py  network.py  processes.py
src/dashboards/: __init__.py  live.py
src/utils/: config.py  prometheus.py  store.py
tests/: test_alerts.py  test_collectors.py
